css: Prevent word-wrap in sidebar

--- a/docs/source/_static/custom.css
+++ b/docs/source/_static/custom.css
@@ -1,3 +1,7 @@
 .wy-nav-content {
     max-width: 75% !important;
 }
+
+.wy-nav-side {
+    white-space: nowrap;
+}
